[metadata]
name = tomograph
summary = Tiny tims tracing tomograph
description-file =
    README.md
author = Tomograph Developers
author-email = timjr@yahoo-inc.com
classifier =
    Development Status :: 3 - Alpha Development Status
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tomograph

[nosetests]
cover-erase = true
verbosity = 2
